<resources>
    <string name="app_name">InstaInsight</string>
    <string name="text_signin">Log In</string>
    <string name="text_signout">Log Out</string>

    <string name="lbl_connectwithinstagram">Log in with Instagram</string>

    <string name="menu_freeuser">Free User</string>
    <string name="menu_paiduser">Pro User</string>

    <string name="tab_freeuser">Free</string>
    <string name="tab_paiduser">Pro</string>

    <string name="lbl_follower">Follower</string>
    <string name="lbl_following">Following</string>

    <string name="lbl_newfollowers">New Followers</string>
    <string name="lbl_newfollowing">New Following</string>
    <string name="lbl_blockedbyfollowing">Not Following Back</string>
    <string name="lbl_blockedfollowers">I am not Following Back</string>
    <string name="lbl_likegraphs">Like Trend</string>

    <string name="lbl_prfl_vwrs">Profile Stalkers</string>
    <string name="lbl_my_top_likers">My Top Likers</string>
    <string name="lbl_who_i_like_most">Who I Like Most</string>
    <string name="lbl_popular_followers">Most Popular Followers</string>
    <string name="lbl_ghost_followers">Ghost Followers</string>

    <string name="font_roboto_regular">Roboto-Regular.ttf</string>

    <string name="lbl_no_data_found">No data found</string>

    <string name="lbl_no_followers">No New Followers</string>
    <string name="lbl_no_following">No New Following</string>
    <string name="lbl_no_notfollowingback">Not found any who doesn\'t following back</string>
    <string name="lbl_no_notfollowingmeback">Not found any to whom you are not following back</string>

    <string name="subscription_period_prompt">Select your subscription period</string>
    <string name="subscription_resignup_prompt">To reactivate your subscription, select your subscription period</string>
    <string name="subscription_update_prompt">To change your subscription, select your new subscription period</string>
    <string name="subscription_period_monthly">Monthly</string>
    <string name="subscription_period_yearly">Yearly</string>
    <string name="subscription_prompt_continue">Continue</string>
    <string name="subscription_prompt_cancel">Cancel</string>
    <string name="content_description_app_loading_image">App loading image</string>
    <string name="content_description_title_image">80\'s Video Game Style Car Logo</string>
    <string name="content_desc_gas_gauge_indicator">Gas gauge indicator</string>
    <string name="content_desc_free_vs_premium_indicator">Free or Premium Image Indicator</string>

    <string name="tst_api_failure">Something went wrong. Please try again..</string>

    <string name="tst_no_internet">Please connect to Internet.</string>

    <string name="lbl_follow">Follow</string>
    <string name="lbl_unfollow">Unfollow</string>

    <string name="lbl_go_pro">Go Pro</string>
    <string name="lbl_upgradetopro">Upgrade to Pro</string>
    <string name="lbl_removeads">Remove Ads</string>

    <string name="inapp_subscription_1month">Monthly for $0.99/MO</string>
    <string name="inapp_subscription_6months">Half Yearly $0.75/MO</string>
    <string name="inapp_subscription_1year">Yearly $0.49/MO</string>


</resources>
