<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.instainsight.profile.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rltv_userinfo_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/base" />

                <RelativeLayout
                    android:id="@+id/rltv_userinfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    android:layout_marginTop="@dimen/dimen_110dp"
                    android:background="@android:color/white">

                    <TextView
                        android:id="@+id/txtvw_profilename"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_20dp"
                        android:layout_marginTop="@dimen/dimen_70dp"
                        android:gravity="center"
                        android:textSize="@dimen/font_20sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_below="@+id/txtvw_profilename"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtvw_profilename"
                        android:layout_marginBottom="@dimen/dimen_10dp"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <LinearLayout
                            android:id="@+id/lnrlyt_followers"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lbl_follower"
                                android:textSize="@dimen/font_16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txtvw_followercount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="-"
                                android:textSize="@dimen/font_16sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/lnrlyt_following"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lbl_following"
                                android:textSize="@dimen/font_16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txtvw_followingcount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="-"
                                android:textSize="@dimen/font_16sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </LinearLayout>
                </RelativeLayout>

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/imgvw_profilepic"
                    android:layout_width="@dimen/dimen_120dp"
                    android:layout_height="@dimen/dimen_120dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dimen_40dp"
                    android:src="@drawable/ic_user"
                    app:civ_border_color="#EEEEEE"
                    app:civ_border_width="2dp"
                    app:civ_shadow="false"
                    app:civ_shadow_color="#8BC34A"
                    app:civ_shadow_radius="10" />

                <!--<ImageView-->
                <!--android:id="@+id/imgvw_profilepic"-->
                <!--android:layout_width="@dimen/dimen_120dp"-->
                <!--android:layout_height="@dimen/dimen_120dp"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:layout_marginTop="@dimen/dimen_40dp"-->
                <!--android:src="@drawable/ic_user"-->
                <!--android:visibility="gone" />-->

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:background="@android:color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/rltv_followersfollowings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/lnrlyt_newfollowers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/imgvw_newfollowers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/newfollowers" />

                        <TextView
                            android:id="@+id/txtvw_newfollowers"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dimen_10dp"
                            android:layout_weight="1"
                            android:text="@string/lbl_newfollowers"
                            android:textSize="@dimen/font_16sp"
                            android:textStyle="bold" />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@android:color/darker_gray"
                            android:gravity="center"
                            android:visibility="gone">

                            <TextView
                                android:id="@+id/txtvw_newfollowers_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/dimen_5dp"
                                android:text="-"
                                android:textSize="@dimen/font_16sp"
                                android:textStyle="bold" />
                        </RelativeLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:id="@+id/lnrlyt_newfollowing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/imgvw_newfollowing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/newfollowing" />

                        <TextView
                            android:id="@+id/txtvw_newfollowing"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dimen_10dp"
                            android:layout_weight="1"
                            android:text="@string/lbl_newfollowing"
                            android:textSize="@dimen/font_16sp"
                            android:textStyle="bold" />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@android:color/darker_gray"
                            android:gravity="center"
                            android:visibility="gone">

                            <TextView
                                android:id="@+id/txtvw_newfollowing_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/dimen_5dp"
                                android:text="-"
                                android:textSize="@dimen/font_16sp"
                                android:textStyle="bold" />
                        </RelativeLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:id="@+id/lnrlyt_blockedbyfollowing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/imgvw_blockedbyfollowing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/notfollowingback" />

                        <TextView
                            android:id="@+id/txtvw_blockedbyfollowing"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dimen_10dp"
                            android:text="@string/lbl_blockedbyfollowing"
                            android:textSize="@dimen/font_16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:id="@+id/lnrlyt_blockedfollowers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/imgvw_blockedfollowers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/iamnotfollowingback" />

                        <TextView
                            android:id="@+id/txtvw_blockedfollowers"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dimen_10dp"
                            android:text="@string/lbl_blockedfollowers"
                            android:textSize="@dimen/font_16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:id="@+id/lnrlyt_likegraph"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/imgvw_likegraph"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/likegraphs" />

                        <TextView
                            android:id="@+id/txtvw_likegraph"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dimen_10dp"
                            android:text="@string/lbl_likegraphs"
                            android:textSize="@dimen/font_16sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>

